// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ QCGZt sc-eltcbb gkaZUv sc-kiYtDG buEsyd"
    >
      <h3
        class="sc-gWHgXt eCVPSB sc-cBNfnY hJuLdz"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ QCGZt sc-eltcbb eNYkJU sc-kiYtDG buEsyd"
    >
      <h3
        class="sc-gWHgXt eCVPSB sc-cBNfnY hJuLdz"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
